--- a/20210126-test-impact-report.html
+++ b/20210126-test-impact-report.html
@@ -3121,8 +3121,7 @@ cnMvZG93bnJldi54bWxQSwUGAAAAAAQABAD3AAAAiwMAAAAA
  </v:shape><w:wrap type="none"/>
  <w:anchorlock/>
 </v:group><![endif]--><![if !vml]><img width=623 height=450
-src="https://raw.githubusercontent.com/zwulderkINTERISE/random/master/temp_images/benefits.png" v:shapes="Group_x0020_6 Picture_x0020_2 Picture_x0020_1"><![endif]><!--[if mso & !supportInlineShapes & supportFields]><v:shape
- id="_x0000_i1033" type="#_x0000_t75" style='width:467.25pt;height:337.5pt'>
+				       <iframe src ="https://interise.shinyapps.io/shiny-alumni-map/">Your browser does not support iframes.</iframe>
  <v:imagedata croptop="-65520f" cropbottom="65520f"/>
 </v:shape><span style='mso-element:field-end'></span><![endif]--><span
 style='font-family:"Proxima Nova Alt Lt";color:white;mso-themecolor:background1'><o:p></o:p></span></p>
