--- a/20210126-test-impact-report.html
+++ b/20210126-test-impact-report.html
@@ -3120,7 +3120,7 @@ cnMvZG93bnJldi54bWxQSwUGAAAAAAQABAD3AAAAiwMAAAAA
   <v:path arrowok="t"/>
  </v:shape><w:wrap type="none"/>
  <w:anchorlock/>
-</v:group><![endif]--><![if !vml]><img width=623 height=450
+</v:group><![endif]--><![if !vml]>
 				       <iframe src ="https://interise.shinyapps.io/shiny-alumni-map/">Your browser does not support iframes.</iframe>
  <v:imagedata croptop="-65520f" cropbottom="65520f"/>
 </v:shape><span style='mso-element:field-end'></span><![endif]--><span
